--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,40 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-id">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="javascript-dependent" content="true" />
-
-    <title>CIMSA ULM</title>
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <meta name="author" content="CIMSA ULM" />
-    <meta
-      name="description"
-      content="CIMSA (Center for Indonesian Medical Students’ Activities) is an independent, non-profit and non-governmental organization, that centers on the Sustainable Development Goals."
-    />
-    <meta property="og:title" content="CIMSA ULM" />
-    <meta
-      property="og:description"
-      content="CIMSA (Center for Indonesian Medical Students’ Activities) is an independent, non-profit and non-governmental organization, that centers on the Sustainable Development Goals."
-    />
-    <meta property="og:type" content="organization" />
-    <meta property="og:url" content="/" />
-    <meta property="og:image" content="=/favicon.png" />
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "CIMSA ULM",
-        "url": "/",
-        "description": "CIMSA (Center for Indonesian Medical Students’ Activities) is an independent, non-profit and non-governmental organization, that centers on the Sustainable Development Goals.",
-        "publisher": {
-          "@type": "Organization",
-          "name": "CIMSA ULM",
-          "logo": "/favicon.png"
-        }
-      }o
-    </script>
   </head>
   <body>
     <div id="app">
