--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="javascript-dependent" content="true" />
+
+    <title>CIMSA ULM</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="author" content="CIMSA ULM" />
+    <meta
+      name="description"
+      content="CIMSA (Center for Indonesian Medical Students’ Activities) is an independent, non-profit and non-governmental organization, that centers on the Sustainable Development Goals."
+    />
   </head>
   <body>
     <div id="app">
